src/components/scan/ScanForm.css
.scan-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  padding: 20px;
  font-family: 'Inter', sans-serif;
}

.scan-form {
  display: flex;
  align-items: center;
  gap: 10px;
}

.scan-input {
  padding: 12px;
  font-size: 16px;
  border: 1px solid #ccc;
  border-radius: 12px;
  flex: 1;
  min-width: 400px;
  outline: none;
  transition: border-color 0.3s ease, box-shadow 0.3s ease;
}

.scan-input:focus {
  border-color: #007bff;
  box-shadow: 0 0 6px rgba(0, 123, 255, 0.3);
}

.scan-button {
  padding: 12px 20px;
  background-color: #007bff;
  color: #fff;
  border: none;
  border-radius: 12px;
  cursor: pointer;
  transition: background-color 0.3s ease;
	font-size: 12px;
	font-weight: 600;
}

.scan-button:hover {
  background-color: #0056b3;
}

.scan-error {
  color: #d85c5c;
  margin-bottom: 10px;
  font-size: 14px;
}

/* revoir */
.toggle-container {
  margin-top: 20px;
  display: flex;
  justify-content: center;
  align-items: center;
}

.toggle-label {
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 14px;
  font-weight: 500;
  color: #333;
}

.toggle-switch {
  position: absolute;
  opacity: 0;
  width: 0;
  height: 0;
}

.toggle-slider {
  width: 40px;
  height: 20px;
  background-color: #ccc;
  border-radius: 20px;
  position: relative;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

.toggle-slider:before {
  content: "";
  position: absolute;
  width: 18px;
  height: 18px;
  background-color: white;
  border-radius: 50%;
  top: 1px;
  left: 1px;
  transition: transform 0.2s ease;
}

.toggle-switch:checked + .toggle-slider {
  background-color: #007bff;
}

.toggle-switch:checked + .toggle-slider:before {
  transform: translateX(20px);
}

